--- a/reporter/agent.service
+++ b/reporter/agent.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=node
 WorkingDirectory=/opt/reporter
-ExecStart=/usr/bin/node index.ts
+ExecStart=/usr/bin/node dist/index.js
 Restart=on-failure
 
 [Install]
